--- a/my project/index.html
+++ b/my project/index.html
@@ -3,9 +3,9 @@
 
 <head>
 	<title>Portfolio</title>
-	<script src="https://kit.fontawesome.com/a243bcb0fc.js" crossorigin="anonymous"></script>
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="https://kit.fontawesome.com/a243bcb0fc.js" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
 </head>
 
 <body>
@@ -15,16 +15,15 @@
 		</div>
 		<div class="text-box">
 			<h1 class="primary-heading">
-				<span class="primary-heading-main">CodeMasters</span>
-				<span class="primary-heading-sub">{ Here the quest to code begins }</span>
+				<span class="primary-heading-main">codemasters</span>
+				<span class="primary-heading-sub"> { here the quest to code begins } </span>
 			</h1>
-			<a class="btn btn-white btn-animated">Discover</a>
-			<!-- <a class="btn btn-white btn-animated2">Discover</a> -->
+			<a href="#" class="btn btn-white btn-animated">let's begin coding</a>
 		</div>
 
 	</header>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
+
 </body>
 
 </html>
