--- a/my project/index.html
+++ b/my project/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://kit.fontawesome.com/a243bcb0fc.js" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
+	<!-- <script src="core.js"></script> -->
+	<script src="https://cdn.jsdelivr.net/npm/typeit@6.1.1/dist/typeit.min.js"></script>
 </head>
 
 <body>
@@ -18,11 +20,63 @@
 				<span class="primary-heading-main">codemasters</span>
 				<span class="primary-heading-sub"> { here the quest to code begins } </span>
 			</h1>
-			<a href="#" class="btn btn-white btn-animated">let's begin coding</a>
+			<a href="#" onclick="typeWriter()" class="btn btn-white btn-animated">let's begin coding</a>
 		</div>
-
 	</header>
 
+	<section class="main-intro">
+		<div class="main-header">
+			<h2 class="main-heading">
+				<p id="heading-text"></p>
+			</h2>
+		</div>
+		<div class="section-text">
+			<p class="text-content">
+				We are a group of two friends who are passionate for coding. Currently Persuing <span> { B.Tech -
+					Computer
+					science in
+					GNDEC, LDH } </span>. With our
+				current goal of mastering <span> { Web Development, Python, Java ... } </span>. We are very keen to
+				indulge in Healthy
+				Compition, <span> { like Hackathons, Code Alongs, Code Relays ... } </span> and
+				thus Try to impove ourselves and with each other.
+				and our Passionate on
+				tackling the challenges thrown to us.
+				Currently we are Working on <span> { React, Advanced CSS, Javascript ... } </span>;
+			</p>
+		</div>
+	</section>
+
+	<section class="project-intro">
+		<div class="projects">
+
+		</div>
+	</section>
+
+
+
+
+	<script>
+		new TypeIt("#heading-text", {
+			speed: 75,
+			loop: true
+		}).type("Who We Are ?")
+			.pause(3000)
+			.delete()
+			.pause(2000)
+			.type("What do we do ?")
+			.pause(3000)
+			.delete()
+			.pause(2000)
+			.type("What we make ?")
+			.pause(4000)
+			.delete()
+			.pause(3000)
+			.type("How Do We Make ?")
+			.pause(5000)
+			.go();
+
+	</script>
 
 </body>
 
