--- a/my project/index.html
+++ b/my project/index.html
@@ -31,19 +31,18 @@
 			</h2>
 		</div>
 		<div class="section-text">
-			<p class="text-content">
-				We are a group of two friends who are passionate for coding. Currently Persuing <span> { B.Tech -
-					Computer
-					science in
-					GNDEC, LDH } </span>. With our
-				current goal of mastering <span> { Web Development, Python, Java ... } </span>. We are very keen to
+			<div class="text-content">
+				We are a group of two friends who are passionate for coding. Currently Persuing <span> { <p>B.Tech -
+						Computer Science in GNDEC, LDH</p> } </span>. With our
+				current goal of mastering <span> { <p>Web Development, Python, Java ...</p> } </span>. We are very keen
+				to
 				indulge in Healthy
-				Compition, <span> { like Hackathons, Code Alongs, Code Relays ... } </span> and
+				Compition, <span> { <p>like Hackathons, Code Alongs, Code Relays ...</p> } </span> and
 				thus Try to impove ourselves and with each other.
 				and our Passionate on
 				tackling the challenges thrown to us.
-				Currently we are Working on <span> { React, Advanced CSS, Javascript ... } </span>;
-			</p>
+				Currently we are Working on <span> { <p>React, Advanced CSS, Javascript ...</p> } </span>;
+			</div>
 		</div>
 	</section>
 
