Updated html 'added array look'

--- a/my project/index.html
+++ b/my project/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://kit.fontawesome.com/a243bcb0fc.js" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&display=swap" rel="stylesheet">
 	<!-- <script src="core.js"></script> -->
 	<script src="https://cdn.jsdelivr.net/npm/typeit@6.1.1/dist/typeit.min.js"></script>
 </head>
@@ -32,16 +33,14 @@
 		</div>
 		<div class="section-text">
 			<div class="text-content">
-				We are a group of two friends who are passionate for coding. Currently Persuing <span> { <p>B.Tech -
-						Computer Science in GNDEC, LDH</p> } </span>. With our
-				current goal of mastering <span> { <p>Web Development, Python, Java ...</p> } </span>. We are very keen
-				to
-				indulge in Healthy
-				Compition, <span> { <p>like Hackathons, Code Alongs, Code Relays ...</p> } </span> and
-				thus Try to impove ourselves and with each other.
-				and our Passionate on
-				tackling the challenges thrown to us.
-				Currently we are Working on <span> { <p>React, Advanced CSS, Javascript ...</p> } </span>;
+				[
+				"We are a group of two friends who are passionate for coding.", "Currently Persuing <span> { <p>B.Tech -
+						Computer Science in GNDEC, LDH.</p> } </span>.", "With our
+				current goal of mastering <span> { <p>Web Development, Python, Java ...</p> } </span>.", "We are very keen
+				to indulge in Healthy Compition, <span> { <p>like Hackathons, Code Alongs, Code Relays ...</p> } </span> and
+				thus Try to impove ourselves along with each other.", "We Passionatly tackle the challenges thrown to us.",
+				"Currently we are Working on <span> { <p>React, Advanced CSS, Javascript ...</p> } </span>;"
+				];
 			</div>
 		</div>
 	</section>
@@ -59,19 +58,19 @@
 		new TypeIt("#heading-text", {
 			speed: 75,
 			loop: true
-		}).type("Who We Are ?")
+		}).type("\"Who We Are ?\"")
 			.pause(3000)
 			.delete()
 			.pause(2000)
-			.type("What do we do ?")
+			.type("\"What do we do ?\"")
 			.pause(3000)
 			.delete()
 			.pause(2000)
-			.type("What we make ?")
+			.type("\"What we make ?\"")
 			.pause(4000)
 			.delete()
 			.pause(3000)
-			.type("How Do We Make ?")
+			.type("\"How Do We Make ?\"")
 			.pause(5000)
 			.go();
 
