addd section 3, 4 and footer
avninder raat tak chahiye footer!

--- a/my project/index.html
+++ b/my project/index.html
@@ -56,6 +56,16 @@
 		</div>
 	</section>
 
+	<section id="about-us">
+		<div class="cards">
+
+		</div>
+	</section>
+
+	<footer id="footer">
+
+	</footer>
+
 
 
 
