--- a/my project/index.html
+++ b/my project/index.html
@@ -1,6 +1,153 @@
 <!DOCTYPE html>
 <html>
+<!DOCTYPE html>
+<html>
 
+<head>
+	<title>Portfolio</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="https://kit.fontawesome.com/a243bcb0fc.js" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&display=swap" rel="stylesheet">
+	<!-- <script src="core.js"></script> -->
+	<script src="https://cdn.jsdelivr.net/npm/typeit@6.1.1/dist/typeit.min.js"></script>
+</head>
+
+<body>
+	<header class="header">
+		<div class="logo-box">
+			<img src="logo-white.png" alt="logo" class="logo">
+		</div>
+		<div class="text-box">
+			<h1 class="primary-heading">
+				<span class="primary-heading-main">codemasters</span>
+				<span class="primary-heading-sub"> { here the quest to code begins } </span>
+			</h1>
+			<a href="#" onclick="typeWriter()" class="btn btn-white btn-animated">let's begin coding</a>
+		</div>
+	</header>
+
+	<section id="main-intro">
+		<div class="main-header">
+			<h2 class="main-heading">
+				<p id="heading-text"></p>
+			</h2>
+		</div>
+		<div class="section-text">
+			<div class="text-content">
+				[ <br>
+				<br>
+				" We are a group of two friends who are passionate for coding. Currently Persuing <span> { <p>B.Tech -
+						Computer Science in GNDEC, LDH.</p> } </span>. With our
+				current goal of mastering <span> { <p>Web Development, Python, Java ...</p> } </span> " , <br> " We are
+				very
+				keen
+				to indulge in Healthy Competition, <span> { <p>like Hackathons, Code Alongs, Code Relays ...</p> }
+				</span>
+				and
+				thus Try to impove ourselves along with each other. We Passionatly tackle the challenges thrown to
+				us. Currently we are Working on <span> { <p>React, Advanced CSS, Javascript ...</p> } " </span> <br>
+				<br> ];
+			</div>
+		</div>
+	</section>
+
+	<section id="project-intro">
+		<div class="projects">
+
+		</div>
+	</section>
+
+	<section id="about-us">
+		<div id="head-main-about"></div>
+		<div class="card-gautam">
+			<div class="card middle">
+				<div class="front">
+					<img src="gautam.jpg" alt="">
+				</div>
+				<div class="back">
+					<div class="back-content middle">
+						<h2>Gautam Jain</h2>
+						<span>Web Designer</span>
+						<div class="sm">
+							<a href="#"><i class="fab fa-facebook"></i></a>
+							<a href="#"><i class="fab fa-instagram"></i></a>
+							<a href="#"><i class="fab fa-twitter"></i></a>
+							<a href="#"><i class="fab fa-youtube"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="card-avninder">
+			<div class="card middle">
+				<div class="front">
+					<img src="avninder.jpg" alt="avninder">
+				</div>
+				<div class="back">
+					<div class="back-content middle">
+						<h2>Avninder Preet Singh</h2>
+						<span>Web Designer</span>
+						<div class="sm">
+							<a href="#"><i class="fab fa-facebook"></i></a>
+							<a href="#"><i class="fab fa-instagram"></i></a>
+							<a href="#"><i class="fab fa-twitter"></i></a>
+							<a href="#"><i class="fab fa-youtube"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="buttons">
+			<a href="#" class="btn btn-red btn-gautam btn-animated">Visit Gautam's Site</a>
+			<a href="#" class="btn btn-red btn-avninder btn-animated">Visit Avninder's Site</a>
+		</div>
+
+	</section>
+
+	<footer id="footer">
+
+	</footer>
+
+
+
+
+	<script>
+		new TypeIt("#heading-text", {
+			speed: 60,
+			loop: true
+		}).type("?")
+			.pause(2000)
+			.delete()
+			.type("\"Who We Are ?\"")
+			.pause(3000)
+			.delete()
+			.pause(2000)
+			.type("\"What do we do ?\"")
+			.pause(3000)
+			.delete()
+			.pause(2000)
+			.type("\"What we make ?\"")
+			.pause(4000)
+			.delete()
+			.pause(3000)
+			.type("\"How Do We Make ?\"")
+			.pause(5000)
+			.go();
+
+		new TypeIt("#head-main-about", {
+			speed: 60,
+			loop: true
+		}).type("[ \"About Us..\" ]")
+			.pause(5000)
+			.delete()
+			.go()
+
+	</script>
+
+</body>
+
+</html>
 <head>
 	<title>Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
