Updated html "added footer :)"

--- a/my project/index.html
+++ b/my project/index.html
@@ -107,6 +107,30 @@
 
 	<footer id="footer">
 
+		<h2 class="footer-head"><span class="span1">[</span> "Contact Us" <span class="span1">]</span></h2>
+		<div class="footer-body">
+			<div class="one">
+				<h2 class="footer-div-head"><span class="span1">{</span><span class="headpart">Code</span>Masters<span class="span1">}</span></h2>
+				<div class="footer-icon-holder">
+					<a href="#"><i class="icon1 fab fa-facebook"></i></a>
+					<a href="#"><i class="icon2 fab fa-twitter"></i></a>
+					<a href="#"><i class="icon3 fab fa-youtube"></i></a>
+					<a href="#"><i class="icon4 fab fa-instagram"></i></a>
+					<a href="#"><i class="icon5 fab fa-github"></i></a>
+					<a href="#"><i class="icon6 fab fa-linkedin"></i></a>
+				</div>
+			</div>
+	
+			<div class="two">
+				<h2>"Send us a message !"</h2>
+				<form class="contact-form">
+					<input class="email-input" type="email" placeholder="Enter your Email" required>
+					<textarea class="text-input">Enter Message</textarea>
+					<button><i class="fas fa-check-circle"></i></button>
+				</form>
+			</div>
+		</div>
+		
 	</footer>
 
 
