--- a/Mysite/index.html
+++ b/Mysite/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="Sass/style.css">
 	<script src="https://kit.fontawesome.com/a243bcb0fc.js" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&display=swap" rel="stylesheet">
@@ -29,7 +29,7 @@
 
 		<header id="header">
 			<div class="logo-box">
-				<img src="logo-color.png" alt="logo" class="logo">
+				<img src="img/logo-color.png" alt="logo" class="logo">
 			</div>
 			<div class="text-box">
 				<h1 class="primary-heading">
@@ -79,7 +79,7 @@
 			<div class="card-gautam">
 				<div class="card middle">
 					<div class="front">
-						<img src="gautam.jpg" alt="">
+						<img src="img/gautam.jpg" alt="">
 					</div>
 					<div class="back">
 						<div class="back-content middle">
@@ -98,7 +98,7 @@
 			<div class="card-avninder">
 				<div class="card middle">
 					<div class="front">
-						<img src="avninder.jpg" alt="avninder">
+						<img src="img/avninder.jpg" alt="avninder">
 					</div>
 					<div class="back">
 						<div class="back-content middle">
