--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="Sass/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://kit.fontawesome.com/a243bcb0fc.js" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&display=swap" rel="stylesheet">
