--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -34,7 +34,7 @@
 			<div class="text-box">
 				<h1 class="primary-heading">
 					<span class="primary-heading-main">
-						Devmasters97</span>
+						<span class="main-head-part">Dev</span>masters91</span>
 					<span class="primary-heading-sub"> { here the quest to code begins } </span>
 				</h1>
 				<a href="#project-intro" class="btn btn-white btn-animated">let's begin coding</a>
