--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -14,9 +14,11 @@
 	<div class="container">
 		<nav class="navbar" id="navbar">
 			<div class="hamburger">
-				<div class="line"></div>
-				<div class="line"></div>
-				<div class="line"></div>
+				<div class="hamburger-inner">
+					<div class="line1"></div>
+					<div class="line"></div>
+					<div class="line2"></div>
+				</div>
 			</div>
 			<ul class="nav-links">
 				<li><a href="#header">Home</a></li>
