--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -72,7 +72,59 @@
 
 		<section id="project-intro">
 			<div class="projects">
+				<div class="pricing-table">
+					<div class="pricing-card">
+						<h3 class="pricing-card-header">Nodejs</h3>
+						<div class="price">YelpCamp2020</div>
+						<ul>
+							<li><strong>3</strong> Websites</li>
+							<li><strong>20 GB</strong> SSD</li>
+							<li><strong>1</strong> Domain Name</li>
+							<li><strong>5</strong> Email</li>
+							<li><strong>1x</strong> CPU & RAM</li>
+						</ul>
+						<a href="#" class="order-btn">Visit</a>
+					</div>
 
+					<div class="pricing-card">
+						<h3 class="pricing-card-header">React</h3>
+						<div class="price">Hamburger Creator</div>
+						<ul>
+							<li><strong>10</strong> Websites</li>
+							<li><strong>50 GB</strong> SSD</li>
+							<li><strong>1</strong> Domain Name</li>
+							<li><strong>20</strong> Email</li>
+							<li><strong>1.5x</strong> CPU & RAM</li>
+						</ul>
+						<a href="#" class="order-btn">Visit</a>
+					</div>
+
+					<div class="pricing-card">
+						<h3 class="pricing-card-header">Advance Javascript</h3>
+						<div class="price">Dom Manipulation</div>
+						<ul>
+							<li><strong>30</strong> Websites</li>
+							<li><strong>150 GB</strong> SSD</li>
+							<li><strong>1</strong> Domain Name</li>
+							<li><strong>40</strong> Email</li>
+							<li><strong>2x</strong> CPU & RAM</li>
+						</ul>
+						<a href="#" class="order-btn">Visit</a>
+					</div>
+
+					<div class="pricing-card">
+						<h3 class="pricing-card-header">Backend Server</h3>
+						<div class="price">BlogApp</div>
+						<ul>
+							<li><strong>100</strong> Websites</li>
+							<li><strong>500 GB</strong> SSD</li>
+							<li><strong>1</strong> Domain Name</li>
+							<li><strong>100</strong> Email</li>
+							<li><strong>4x</strong> CPU & RAM</li>
+						</ul>
+						<a href="#" class="order-btn">Visit</a>
+					</div>
+				</div>
 			</div>
 		</section>
 
