add all new project section

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -71,61 +71,56 @@
 		</section>
 
 		<section id="project-intro">
-			<div class="projects">
-				<div class="pricing-table">
-					<div class="pricing-card">
-						<h3 class="pricing-card-header">Nodejs</h3>
-						<div class="price">YelpCamp2020</div>
-						<ul>
-							<li><strong>3</strong> Websites</li>
-							<li><strong>20 GB</strong> SSD</li>
-							<li><strong>1</strong> Domain Name</li>
-							<li><strong>5</strong> Email</li>
-							<li><strong>1x</strong> CPU & RAM</li>
-						</ul>
-						<a href="#" class="order-btn">Visit</a>
+			<div class="container">
+					<div class="card1">
+						<div class="content">
+							<h1 class="heading1-1">1</h1>
+							<h2 class="heading2-1">YelpCamp 2020</h2>
+							<p class="para1-1">A beautiful website to showcase campsites all around the world made completely from scratch using Nodejs as backend platform.</p>
+						</div>
 					</div>
-
-					<div class="pricing-card">
-						<h3 class="pricing-card-header">React</h3>
-						<div class="price">Hamburger Creator</div>
-						<ul>
-							<li><strong>10</strong> Websites</li>
-							<li><strong>50 GB</strong> SSD</li>
-							<li><strong>1</strong> Domain Name</li>
-							<li><strong>20</strong> Email</li>
-							<li><strong>1.5x</strong> CPU & RAM</li>
-						</ul>
-						<a href="#" class="order-btn">Visit</a>
+			
+					<div class="card2">
+						<div class="content">
+							<h1 class="heading1-2">2</h1>
+							<h2 class="heading2-2">Blog App</h2>
+							<p class="para1-2">A beautiful website to post and manage your blogs.With complete create and delete facilities.</p>
+						</div>
 					</div>
-
-					<div class="pricing-card">
-						<h3 class="pricing-card-header">Advance Javascript</h3>
-						<div class="price">Dom Manipulation</div>
-						<ul>
-							<li><strong>30</strong> Websites</li>
-							<li><strong>150 GB</strong> SSD</li>
-							<li><strong>1</strong> Domain Name</li>
-							<li><strong>40</strong> Email</li>
-							<li><strong>2x</strong> CPU & RAM</li>
-						</ul>
-						<a href="#" class="order-btn">Visit</a>
+			
+					<div class="card3">
+						<div class="content">
+							<h1 class="heading1-3">3</h1>
+							<h2 class="heading2-3">Color Game</h2>
+							<p class="para1-3">Think you know about RGB colors try this website to test and improve your knowledge.</p>
+						</div>
 					</div>
-
-					<div class="pricing-card">
-						<h3 class="pricing-card-header">Backend Server</h3>
-						<div class="price">BlogApp</div>
-						<ul>
-							<li><strong>100</strong> Websites</li>
-							<li><strong>500 GB</strong> SSD</li>
-							<li><strong>1</strong> Domain Name</li>
-							<li><strong>100</strong> Email</li>
-							<li><strong>4x</strong> CPU & RAM</li>
-						</ul>
-						<a href="#" class="order-btn">Visit</a>
+			
+					<div class="card4">
+						<div class="content">
+							<h1 class="heading1-4">4</h1>
+							<h2 class="heading2-4">Dice Game</h2>
+							<p class="para1-4">A fun little game to play and enjoy with your friend.</p>
+						</div>
 					</div>
+			
+					<div class="card5">
+						<div class="content">
+							<h1 class="heading1-5">5</h1>
+							<h2 class="heading2-5">Notes App</h2>
+							<p class="para1-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus tempore ut eveniet.</p>
+						</div>
+					</div>
+			
+					<div class="card6">
+						<div class="content">
+							<h1 class="heading1-6">6</h1>
+							<h2 class="heading2-6">Candy Site</h2>
+							<p class="para1-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus tempore ut eveniet.</p>
+						</div>
+					</div>
+			
 				</div>
-			</div>
 		</section>
 
 		<section id="about-us">
