--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -71,6 +71,7 @@
 		</section>
 
 		<section id="project-intro">
+			<h1 id="project-section-head"><span class="head-bracket">{</span> "Our Projects" <span class="head-bracket">}</span> </h1>
 			<div class="container">
 					<div class="card1">
 						<div class="content">
