--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -125,50 +125,46 @@
 		</section>
 
 		<section id="about-us">
-			<div id="head-main-about"></div>
-			<div class="card-gautam">
-				<div class="card middle">
-					<div class="front">
-						<img src="img/gautam.jpg" alt="">
-					</div>
-					<div class="back">
-						<div class="back-content middle">
-							<h2>Gautam Jain</h2>
-							<span>Web Designer</span>
-							<div class="sm">
-								<a href="#"><i class="fab fa-facebook"></i></a>
-								<a href="#"><i class="fab fa-instagram"></i></a>
-								<a href="#"><i class="fab fa-twitter"></i></a>
-								<a href="#"><i class="fab fa-youtube"></i></a>
-							</div>
-						</div>
-					</div>
+			<div class="about-table">
+				<div class="about-card">
+					<img src="img/gautam.jpg" alt="Gautam" class="about-image">
+					<ul>
+						<li class="name">Gautam Jain</li>
+						<li class="e-mail">Astrogeek77@gmail.com</li>
+						<li class="age">2000-10-09</li>
+						<li class="intrests">Rigrous Thinker ,Passionate for Space Physics, Tech Enthusiast</li>
+						<li class="about-icon-holder">
+							<a href="#"><i class="icon1 fab fa-facebook"></i></a>
+							<a href="#"><i class="icon2 fab fa-twitter"></i></a>
+							<a href="#"><i class="icon3 fab fa-youtube"></i></a>
+							<a href="#"><i class="icon4 fab fa-instagram"></i></a>
+							<a href="#"><i class="icon5 fab fa-github"></i></a>
+							<a href="#"><i class="icon6 fab fa-linkedin"></i></a>
+						</li>
+					</ul>
+					<a href="#" class="order-btn">Visit Portfolio</a>
 				</div>
-			</div>
-			<div class="card-avninder">
-				<div class="card middle">
-					<div class="front">
-						<img src="img/avninder.jpg" alt="avninder">
-					</div>
-					<div class="back">
-						<div class="back-content middle">
-							<h2>Avninder Preet Singh</h2>
-							<span>Web Designer</span>
-							<div class="sm">
-								<a href="#"><i class="fab fa-facebook"></i></a>
-								<a href="#"><i class="fab fa-instagram"></i></a>
-								<a href="#"><i class="fab fa-twitter"></i></a>
-								<a href="#"><i class="fab fa-youtube"></i></a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="buttons">
-				<a href="#" class="btn btn-red btn-gautam btn-animated">Visit Gautam's Site</a>
-				<a href="#" class="btn btn-red btn-avninder btn-animated">Visit Avninder's Site</a>
-			</div>
 
+				<div class="about-card">
+					<img src="img/avninder.jpg" alt="Avninder" class="about-image">
+					<ul>
+						<li class="name">Avninder Preet Singh</li>
+						<li class="e-mail">Someone@example.com</li>
+						<li class="age">2001-2-29</li>
+						<li class="intrests">Passionate for Web Development, Intrests in Biology, Electronics, Space
+						</li>
+						<li class="about-icon-holder">
+							<a href="#"><i class="icon1 fab fa-facebook"></i></a>
+							<a href="#"><i class="icon2 fab fa-twitter"></i></a>
+							<a href="#"><i class="icon3 fab fa-youtube"></i></a>
+							<a href="#"><i class="icon4 fab fa-instagram"></i></a>
+							<a href="#"><i class="icon5 fab fa-github"></i></a>
+							<a href="#"><i class="icon6 fab fa-linkedin"></i></a>
+						</li>
+					</ul>
+					<a href="#" class="order-btn">Visit portfolio</a>
+			     </div>
+			</div>
 		</section>
 
 		<footer id="footer">
