--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -149,8 +149,8 @@
 					<img src="img/avninder.jpg" alt="Avninder" class="about-image">
 					<ul>
 						<li class="name">Avninder Preet Singh</li>
-						<li class="e-mail">Someone@example.com</li>
-						<li class="age">2001-2-29</li>
+						<li class="e-mail">avninderpreet99@gmail.com</li>
+						<li class="age">2001-03-09</li>
 						<li class="intrests">Passionate for Web Development, Intrests in Biology, Electronics, Space
 						</li>
 						<li class="about-icon-holder">
