updated about section (for real) :}

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -125,45 +125,50 @@
 		</section>
 
 		<section id="about-us">
-			<div class="about-table">
-				<div class="about-card">
-					<img src="img/gautam.jpg" alt="Gautam" class="about-image">
-					<ul>
-						<li class="name">Gautam Jain</li>
-						<li class="e-mail">Astrogeek77@gmail.com</li>
-						<li class="age">2000-10-09</li>
-						<li class="intrests">Rigrous Thinker ,Passionate for Space Physics, Tech Enthusiast</li>
-						<li class="about-icon-holder">
-							<a href="#"><i class="icon1 fab fa-facebook"></i></a>
-							<a href="#"><i class="icon2 fab fa-twitter"></i></a>
-							<a href="#"><i class="icon3 fab fa-youtube"></i></a>
-							<a href="#"><i class="icon4 fab fa-instagram"></i></a>
-							<a href="#"><i class="icon5 fab fa-github"></i></a>
-							<a href="#"><i class="icon6 fab fa-linkedin"></i></a>
-						</li>
-					</ul>
-					<a href="#" class="order-btn">Visit Portfolio</a>
-				</div>
+			<div class="heading-about">
+				<span>About us</span>
+			</div>
+			<div class="about-us">
+				<div class="about-table">
+					<div class="about-card">
+						<img src="img/gautam-2.jpg" alt="Gautam" class="about-image">
+						<ul>
+							<li class="name">Gautam Jain</li>
+							<li class="e-mail">Astrogeek77@gmail.com</li>
+							<li class="age">2000-10-09</li>
+							<li class="intrests">Rigrous Thinker ,Passionate for Space Physics, Tech Enthusiast</li>
+							<li class="about-icon-holder">
+								<a href="#"><i class="icon1 fab fa-facebook"></i></a>
+								<a href="#"><i class="icon2 fab fa-twitter"></i></a>
+								<a href="#"><i class="icon3 fab fa-youtube"></i></a>
+								<a href="#"><i class="icon4 fab fa-instagram"></i></a>
+								<a href="#"><i class="icon5 fab fa-github"></i></a>
+								<a href="#"><i class="icon6 fab fa-linkedin"></i></a>
+							</li>
+						</ul>
+						<a href="#" class="order-btn">Visit Portfolio</a>
+					</div>
 
-				<div class="about-card">
-					<img src="img/avninder.jpg" alt="Avninder" class="about-image">
-					<ul>
-						<li class="name">Avninder Preet Singh</li>
-						<li class="e-mail">avninderpreet99@gmail.com</li>
-						<li class="age">2001-03-09</li>
-						<li class="intrests">Passionate for Web Development, Intrests in Biology, Electronics, Space
-						</li>
-						<li class="about-icon-holder">
-							<a href="#"><i class="icon1 fab fa-facebook"></i></a>
-							<a href="#"><i class="icon2 fab fa-twitter"></i></a>
-							<a href="#"><i class="icon3 fab fa-youtube"></i></a>
-							<a href="#"><i class="icon4 fab fa-instagram"></i></a>
-							<a href="#"><i class="icon5 fab fa-github"></i></a>
-							<a href="#"><i class="icon6 fab fa-linkedin"></i></a>
-						</li>
-					</ul>
-					<a href="#" class="order-btn">Visit portfolio</a>
-			     </div>
+					<div class="about-card">
+						<img src="img/avninder.jpg" alt="Avninder" class="about-image">
+						<ul>
+							<li class="name">Avninder Preet Singh</li>
+							<li class="e-mail">Someone@example.com</li>
+							<li class="age">2001-2-29</li>
+							<li class="intrests">Passionate for Web Development, Intrests in Biology, Electronics, Space
+							</li>
+							<li class="about-icon-holder">
+								<a href="#"><i class="icon1 fab fa-facebook"></i></a>
+								<a href="#"><i class="icon2 fab fa-twitter"></i></a>
+								<a href="#"><i class="icon3 fab fa-youtube"></i></a>
+								<a href="#"><i class="icon4 fab fa-instagram"></i></a>
+								<a href="#"><i class="icon5 fab fa-github"></i></a>
+								<a href="#"><i class="icon6 fab fa-linkedin"></i></a>
+							</li>
+						</ul>
+						<a href="#" class="order-btn">Visit portfolio</a>
+					</div>
+				</div>
 			</div>
 		</section>
 
