--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -72,7 +72,7 @@
 
 		<section id="project-intro">
 			<h1 id="project-section-head"><span class="head-bracket">{</span> "Our Projects" <span class="head-bracket">}</span> </h1>
-			<div class="container">
+			<div class="container-project">
 					<div class="card1">
 						<div class="content">
 							<h1 class="heading1-1">1</h1>
