--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -67,7 +67,8 @@
 					</span>
 					and
 					thus Try to impove ourselves along with each other. We Passionatly tackle the challenges thrown to
-					us. Currently we are Working on <span> { <p>React, Advanced CSS, Javascript ...</p> } " </span> <br>
+					us. Currently we are Working on <span> { <p>React, Advanced CSS, Javascript ...</p> } " </span> 
+					<i class="fas fa-pencil-alt blink"></i> <br>
 					<br> ];
 				</div>
 			</div>
