--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -200,10 +200,8 @@
 						<button><i class="fas fa-check-circle"></i></button>
 					</form>
 				</div>
-				<div class="end-footer-text">
-					<p class="text-end">All Rights Reserved @<a href="#">DevMasters</a> 2020.</p>
-				</div>
 			</div>
+				<p class="text-end">All Rights Reserved @<a href="#">DevMasters91</a> 2020.</p>
 		</footer>
 	</div>
 
