--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -14,24 +14,30 @@
 
 <body>
 
-	<div class="container">
-		<nav class="navbar" id="navbar">
-			<div class="hamburger">
-				<div class="hamburger-inner">
-					<div class="line1"></div>
-					<div class="line"></div>
-					<div class="line2"></div>
-				</div>
+	<div class="nav">
+		<input type="checkbox" id="nav-check">
+		<div class="nav-header">
+			<div class="nav-title">
+				DevMasters
 			</div>
-			<ul class="nav-links">
-				<li><a href="#header">Home</a></li>
-				<li><a href="#main-intro">Intro</a></li>
-				<li><a href="#project-intro">Projects</a></li>
-				<li><a href="#about-us">About</a></li>
-				<li><a href="#footer">Contact</a></li>
-			</ul>
-		</nav>
+		</div>
+		<div class="nav-btn">
+			<label for="nav-check">
+				<span></span>
+				<span></span>
+				<span></span>
+			</label>
+		</div>
 
+		<div class="nav-links">
+			<a href="#header" target="_blank">Home</a>
+			<a href="#main-intro" target="_blank">Introduction</a>
+			<a href="#project-intro" target="_blank">Projects</a>
+			<a href="#about-us" target="_blank">About</a>
+			<a href="#footer" target="_blank">Contact</a>
+		</div>
+	</div>
+		
 		<header id="header">
 			<div class="logo-box">
 				<img src="img/logo-color.png" alt="logo" class="logo">
@@ -203,7 +209,6 @@
 			</div>
 				<p class="text-end">All Rights Reserved @<a href="#">DevMasters91</a> 2020.</p>
 		</footer>
-	</div>
 
 
 
