--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -39,9 +39,9 @@
 	</div>
 		
 		<header id="header">
-			<div class="logo-box">
+<!-- 			<div class="logo-box">
 				<img src="img/logo-color.png" alt="logo" class="logo">
-			</div>
+			</div> -->
 			<div class="text-box">
 				<h1 class="primary-heading">
 					<span class="primary-heading-main">
