Changes to Image

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -3,12 +3,13 @@
 
 <head>
 	<meta charset="UTF-8">
-    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Portfolio</title>
 	<script src="https://kit.fontawesome.com/a243bcb0fc.js" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Montserrat:600,900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Montserrat:600,900&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -37,178 +38,184 @@
 			<a href="#footer" target="_blank">Contact</a>
 		</div>
 	</div>
-		
-		<header id="header">
-<!-- 			<div class="logo-box">
+
+	<header id="header">
+		<!-- 			<div class="logo-box">
 				<img src="img/logo-color.png" alt="logo" class="logo">
 			</div> -->
-			<div class="text-box">
-				<h1 class="primary-heading">
-					<span class="primary-heading-main">
-						<span class="main-head-part">Dev</span>masters91</span>
-					<span class="primary-heading-sub"> { here the quest to code begins } </span>
-				</h1>
-				<a href="#project-intro" class="btn btn-white btn-animated">let's begin coding</a>
-			</div>
-		</header>
+		<div class="text-box">
+			<h1 class="primary-heading">
+				<span class="primary-heading-main">
+					<span class="main-head-part">Dev</span>masters91</span>
+				<span class="primary-heading-sub"> { here the quest to code begins } </span>
+			</h1>
+			<a href="#project-intro" class="btn btn-white btn-animated">let's begin coding</a>
+		</div>
+	</header>
 
-		<section id="main-intro">
-			<div class="main-header">
-				<h2 class="main-heading">
-					<p id="heading-text"></p>
-				</h2>
+	<section id="main-intro">
+		<div class="main-header">
+			<h2 class="main-heading">
+				<p id="heading-text"></p>
+			</h2>
+		</div>
+		<div class="section-text">
+			<div class="text-content">
+				[ <br>
+				<br>
+				" We are a group of two friends who are passionate for coding. Currently Persuing <span> { <p>B.Tech
+						-
+						Computer Science in GNDEC, LDH.</p> } </span>. With our
+				current goal of mastering <span> { <p>Web Development, Python, Java ...</p> } </span> " , <br> " We
+				are
+				very
+				keen
+				to indulge in Healthy Competition, <span> { <p>like Hackathons, Code Alongs, Code Relays ...</p> }
+				</span>
+				and
+				thus Try to impove ourselves along with each other. We Passionatly tackle the challenges thrown to
+				us. Currently we are Working on <span> { <p>React, Advanced CSS, Javascript ...</p> } " </span>
+				<i class="fas fa-pencil-alt blink"></i> <br>
+				<br> ];
 			</div>
-			<div class="section-text">
-				<div class="text-content">
-					[ <br>
-					<br>
-					" We are a group of two friends who are passionate for coding. Currently Persuing <span> { <p>B.Tech
-							-
-							Computer Science in GNDEC, LDH.</p> } </span>. With our
-					current goal of mastering <span> { <p>Web Development, Python, Java ...</p> } </span> " , <br> " We
-					are
-					very
-					keen
-					to indulge in Healthy Competition, <span> { <p>like Hackathons, Code Alongs, Code Relays ...</p> }
-					</span>
-					and
-					thus Try to impove ourselves along with each other. We Passionatly tackle the challenges thrown to
-					us. Currently we are Working on <span> { <p>React, Advanced CSS, Javascript ...</p> } " </span> 
-					<i class="fas fa-pencil-alt blink"></i> <br>
-					<br> ];
+		</div>
+	</section>
+
+	<section id="project-intro">
+		<h1 id="project-section-head"><span class="head-bracket">{</span> "Our Projects" <span
+				class="head-bracket">}</span> </h1>
+		<div class="container-project">
+			<div class="card1">
+				<div class="content">
+					<h1 class="heading1-1">1</h1>
+					<h2 class="heading2-1">YelpCamp 2020</h2>
+					<p class="para1-1">A beautiful website to showcase campsites all around the world made completely
+						from scratch using Nodejs as backend platform.</p>
 				</div>
 			</div>
-		</section>
 
-		<section id="project-intro">
-			<h1 id="project-section-head"><span class="head-bracket">{</span> "Our Projects" <span class="head-bracket">}</span> </h1>
-			<div class="container-project">
-					<div class="card1">
-						<div class="content">
-							<h1 class="heading1-1">1</h1>
-							<h2 class="heading2-1">YelpCamp 2020</h2>
-							<p class="para1-1">A beautiful website to showcase campsites all around the world made completely from scratch using Nodejs as backend platform.</p>
-						</div>
-					</div>
-			
-					<div class="card2">
-						<div class="content">
-							<h1 class="heading1-2">2</h1>
-							<h2 class="heading2-2">Blog App</h2>
-							<p class="para1-2">A beautiful website to post and manage your blogs.With complete create and delete facilities.</p>
-						</div>
-					</div>
-			
-					<div class="card3">
-						<div class="content">
-							<h1 class="heading1-3">3</h1>
-							<h2 class="heading2-3">Color Game</h2>
-							<p class="para1-3">Think you know about RGB colors try this website to test and improve your knowledge.</p>
-						</div>
-					</div>
-			
-					<div class="card4">
-						<div class="content">
-							<h1 class="heading1-4">4</h1>
-							<h2 class="heading2-4">Dice Game</h2>
-							<p class="para1-4">A fun little game to play and enjoy with your friend.</p>
-						</div>
-					</div>
-			
-					<div class="card5">
-						<div class="content">
-							<h1 class="heading1-5">5</h1>
-							<h2 class="heading2-5">Notes App</h2>
-							<p class="para1-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus tempore ut eveniet.</p>
-						</div>
-					</div>
-			
-					<div class="card6">
-						<div class="content">
-							<h1 class="heading1-6">6</h1>
-							<h2 class="heading2-6">Candy Site</h2>
-							<p class="para1-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus tempore ut eveniet.</p>
-						</div>
-					</div>
-			
-				</div>
-		</section>
-
-		<section id="about-us">
-			<div class="heading-about">
-				<span>About us</span>
-			</div>
-			<div class="about-us">
-				<div class="about-table">
-					<div class="about-card">
-						<img src="img/gautam-2.jpg" alt="Gautam" class="about-image">
-						<ul>
-							<li class="name">Gautam Jain</li>
-							<li class="e-mail">Astrogeek77@gmail.com</li>
-							<li class="age">2000-10-09</li>
-							<li class="intrests">Rigrous Thinker ,Passionate for Space Physics, Tech Enthusiast</li>
-							<li class="about-icon-holder">
-								<a href="#"><i class="icon1 fab fa-facebook"></i></a>
-								<a href="#"><i class="icon2 fab fa-twitter"></i></a>
-								<a href="#"><i class="icon3 fab fa-youtube"></i></a>
-								<a href="#"><i class="icon4 fab fa-instagram"></i></a>
-								<a href="#"><i class="icon5 fab fa-github"></i></a>
-								<a href="#"><i class="icon6 fab fa-linkedin"></i></a>
-							</li>
-						</ul>
-						<a href="#" class="order-btn">Visit Portfolio</a>
-					</div>
-
-					<div class="about-card">
-						<img src="img/avninder.jpg" alt="Avninder" class="about-image">
-						<ul>
-							<li class="name">Avninder Preet Singh</li>
-							<li class="e-mail">avninderpreet99@gmail.com</li>
-							<li class="age">2001-03-09</li>
-							<li class="intrests">Passionate for Web Development, Intrests in Biology, Electronics, Space
-							</li>
-							<li class="about-icon-holder">
-								<a href="#"><i class="icon1 fab fa-facebook"></i></a>
-								<a href="#"><i class="icon2 fab fa-twitter"></i></a>
-								<a href="#"><i class="icon3 fab fa-youtube"></i></a>
-								<a href="#"><i class="icon4 fab fa-instagram"></i></a>
-								<a href="#"><i class="icon5 fab fa-github"></i></a>
-								<a href="#"><i class="icon6 fab fa-linkedin"></i></a>
-							</li>
-						</ul>
-						<a href="#" class="order-btn">Visit portfolio</a>
-					</div>
+			<div class="card2">
+				<div class="content">
+					<h1 class="heading1-2">2</h1>
+					<h2 class="heading2-2">Blog App</h2>
+					<p class="para1-2">A beautiful website to post and manage your blogs.With complete create and delete
+						facilities.</p>
 				</div>
 			</div>
-		</section>
 
-		<footer id="footer">
-			<h2 id="footer-head"></h2>
-			<div class="footer-body">
-				<div class="one">
-					<h2 class="footer-div-head"><span class="span1">{</span><span
-							class="headpart">Dev</span>Masters<span class="span1">}</span></h2>
-					<div class="footer-icon-holder">
-						<a href="#"><i class="icon1 fab fa-facebook"></i></a>
-						<a href="#"><i class="icon2 fab fa-twitter"></i></a>
-						<a href="#"><i class="icon3 fab fa-youtube"></i></a>
-						<a href="#"><i class="icon4 fab fa-instagram"></i></a>
-						<a href="#"><i class="icon5 fab fa-github"></i></a>
-						<a href="#"><i class="icon6 fab fa-linkedin"></i></a>
-					</div>
-				</div>
-
-				<div class="two">
-					<h2>"Send us a message !"</h2>
-					<form class="contact-form">
-						<input class="email-input" type="email" placeholder="Enter your Email" required>
-						<textarea class="text-input">Enter Message</textarea>
-						<button><i class="fas fa-check-circle"></i></button>
-					</form>
+			<div class="card3">
+				<div class="content">
+					<h1 class="heading1-3">3</h1>
+					<h2 class="heading2-3">Color Game</h2>
+					<p class="para1-3">Think you know about RGB colors try this website to test and improve your
+						knowledge.</p>
 				</div>
 			</div>
-				<p class="text-end">All Rights Reserved @<a href="#">DevMasters91</a> 2020.</p>
-		</footer>
+
+			<div class="card4">
+				<div class="content">
+					<h1 class="heading1-4">4</h1>
+					<h2 class="heading2-4">Dice Game</h2>
+					<p class="para1-4">A fun little game to play and enjoy with your friend.</p>
+				</div>
+			</div>
+
+			<div class="card5">
+				<div class="content">
+					<h1 class="heading1-5">5</h1>
+					<h2 class="heading2-5">Notes App</h2>
+					<p class="para1-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus tempore ut
+						eveniet.</p>
+				</div>
+			</div>
+
+			<div class="card6">
+				<div class="content">
+					<h1 class="heading1-6">6</h1>
+					<h2 class="heading2-6">Candy Site</h2>
+					<p class="para1-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus tempore ut
+						eveniet.</p>
+				</div>
+			</div>
+
+		</div>
+	</section>
+
+	<section id="about-us">
+		<div class="heading-about">
+			<span>About us</span>
+		</div>
+		<div class="about-us">
+			<div class="about-table">
+				<div class="about-card">
+					<img src="img/gautam-101.jpg" alt="Gautam" class="about-image">
+					<ul>
+						<li class="name">Gautam Jain</li>
+						<li class="e-mail">Astrogeek77@gmail.com</li>
+						<li class="age">2000-10-09</li>
+						<li class="intrests">Rigrous Thinker ,Passionate for Space Physics, Tech Enthusiast</li>
+						<li class="about-icon-holder">
+							<a href="#"><i class="icon1 fab fa-facebook"></i></a>
+							<a href="#"><i class="icon2 fab fa-twitter"></i></a>
+							<a href="#"><i class="icon3 fab fa-youtube"></i></a>
+							<a href="#"><i class="icon4 fab fa-instagram"></i></a>
+							<a href="#"><i class="icon5 fab fa-github"></i></a>
+							<a href="#"><i class="icon6 fab fa-linkedin"></i></a>
+						</li>
+					</ul>
+					<a href="#" class="order-btn">Visit Portfolio</a>
+				</div>
+
+				<div class="about-card">
+					<img src="img/avninder.jpg" alt="Avninder" class="about-image">
+					<ul>
+						<li class="name">Avninder Preet Singh</li>
+						<li class="e-mail">avninderpreet99@gmail.com</li>
+						<li class="age">2001-03-09</li>
+						<li class="intrests">Passionate for Web Development, Intrests in Biology, Electronics, Space
+						</li>
+						<li class="about-icon-holder">
+							<a href="#"><i class="icon1 fab fa-facebook"></i></a>
+							<a href="#"><i class="icon2 fab fa-twitter"></i></a>
+							<a href="#"><i class="icon3 fab fa-youtube"></i></a>
+							<a href="#"><i class="icon4 fab fa-instagram"></i></a>
+							<a href="#"><i class="icon5 fab fa-github"></i></a>
+							<a href="#"><i class="icon6 fab fa-linkedin"></i></a>
+						</li>
+					</ul>
+					<a href="#" class="order-btn">Visit portfolio</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<footer id="footer">
+		<h2 id="footer-head"></h2>
+		<div class="footer-body">
+			<div class="one">
+				<h2 class="footer-div-head"><span class="span1">{</span><span class="headpart">Dev</span>Masters<span
+						class="span1">}</span></h2>
+				<div class="footer-icon-holder">
+					<a href="#"><i class="icon1 fab fa-facebook"></i></a>
+					<a href="#"><i class="icon2 fab fa-twitter"></i></a>
+					<a href="#"><i class="icon3 fab fa-youtube"></i></a>
+					<a href="#"><i class="icon4 fab fa-instagram"></i></a>
+					<a href="#"><i class="icon5 fab fa-github"></i></a>
+					<a href="#"><i class="icon6 fab fa-linkedin"></i></a>
+				</div>
+			</div>
+
+			<div class="two">
+				<h2>"Send us a message !"</h2>
+				<form class="contact-form">
+					<input class="email-input" type="email" placeholder="Enter your Email" required>
+					<textarea class="text-input">Enter Message</textarea>
+					<button><i class="fas fa-check-circle"></i></button>
+				</form>
+			</div>
+		</div>
+		<p class="text-end">All Rights Reserved @<a href="#">DevMasters91</a> 2020.</p>
+	</footer>
 
 
 
