--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -136,7 +136,7 @@
 					<p class="para1-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus tempore ut
 						eveniet.</p>
 				</div>
-			</div>
+			</divv>
 
 		</div>
 	</section>
@@ -155,7 +155,7 @@
 						<li class="age">2000-10-09</li>
 						<li class="intrests">Rigrous Thinker ,Passionate for Space Physics, Tech Enthusiast</li>
 						<li class="about-icon-holder">
-							<a href="#"><i class="icon1 fab fa-facebook"></i></a>
+							<a href="shorturl.at/DFNY8"><i class="icon1 fab fa-facebook"></i></a>
 							<a href="#"><i class="icon2 fab fa-twitter"></i></a>
 							<a href="#"><i class="icon3 fab fa-youtube"></i></a>
 							<a href="#"><i class="icon4 fab fa-instagram"></i></a>
