--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -63,7 +63,7 @@
 			<div class="text-content">
 				[ <br>
 				<br>
-				" We are a group of two friends who are passionate for coding. Currently Persuing <span> { <p>B.Tech
+				" We are a group of two friends who are passionate about coding. Currently Pursuing <span> { <p>B.Tech
 						-
 						Computer Science in GNDEC, LDH.</p> } </span>. With our
 				current goal of mastering <span> { <p>Web Development, Python, Java ...</p> } </span> " , <br> " We
@@ -73,8 +73,7 @@
 				to indulge in Healthy Competition, <span> { <p>like Hackathons, Code Alongs, Code Relays ...</p> }
 				</span>
 				and
-				thus Try to impove ourselves along with each other. We Passionatly tackle the challenges thrown to
-				us. Currently we are Working on <span> { <p>React, Advanced CSS, Javascript ...</p> } " </span>
+				thus Try to improve ourselves along with each other. We Passionately tackle the challenges thrown to us. Currently, we are Working on <span> { <p>React, Advanced CSS, Javascript ...</p> } " </span>
 				<i class="fas fa-pencil-alt blink"></i> <br>
 				<br> ];
 			</div>
