updated logo designs

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -5,7 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Portfolio</title>
+	<title>DevMasters Portfolio</title>
+	<link rel="icon" href="https://i.pinimg.com/originals/0f/8b/28/0f8b2870896edcde8f6149fe2733faaf.jpg"
+		type="image/x-icon">
 	<script src="https://kit.fontawesome.com/a243bcb0fc.js" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Montserrat:600,900&display=swap"
@@ -18,7 +20,12 @@
 	<div class="nav">
 		<input type="checkbox" id="nav-check">
 		<div class="nav-header">
-			<div class="nav-title">
+			<div class="nav-title" style="color: #c8d6e5">
+				<svg width=".9em" height=".85em" viewBox="0 0 16 16" class="bi bi-code-slash" fill="#dff9fb"
+					xmlns="http://www.w3.org/2000/svg">
+					<path fill-rule="evenodd"
+						d="M4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0zm-.999-3.124a.5.5 0 0 1 .33.625l-4 13a.5.5 0 0 1-.955-.294l4-13a.5.5 0 0 1 .625-.33z" />
+				</svg>
 				DevMasters
 			</div>
 		</div>
@@ -136,9 +143,9 @@
 					<p class="para1-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus tempore ut
 						eveniet.</p>
 				</div>
-			</divv>
+				</divv>
 
-		</div>
+			</div>
 	</section>
 
 	<section id="about-us">
